--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -36,7 +36,7 @@
             <form id="loginForm">
                 <div class="form-group unselectable">
                     <label for="centreNumber">Centre Number</label>
-                    <input type="text" class="form-control" id="centreNumber" name="centreNumber"
+                    <input type="number" class="form-control" id="centreNumber" name="centreNumber"
                         placeholder="Enter Centre Number" required>
                 </div>
                 <div class="form-group unselectable">
