--- a/CECePortal/enrollment.html
+++ b/CECePortal/enrollment.html
@@ -20,59 +20,76 @@
 
         <h2>Student Enrollment</h2>
         <form id="enrollmentForm" enctype="multipart/form-data">
-            <div class="form-group unselectable">
-                <label for="surname">Surname</label>
-                <input type="text" id="surname" name="surname" required>
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="surname">Surname</label>
+                    <input type="text" id="surname" name="surname" required>
+                </div>
+                <div class="form-group">
+                    <label for="firstname">First Name</label>
+                    <input type="text" id="firstname" name="firstname" required>
+                </div>
             </div>
-            <div class="form-group unselectable">
-                <label for="firstname">First Name</label>
-                <input type="text" id="firstname" name="firstname" required>
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="othername">Other Name</label>
+                    <input type="text" id="othername" name="othername">
+                </div>
+                <div class="form-group">
+                    <label for="dob">Date of Birth</label>
+                    <input type="date" id="dob" name="dob" required>
+                </div>
             </div>
-            <div class="form-group unselectable">
-                <label for="othername">Other Name</label>
-                <input type="text" id="othername" name="othername">
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="gender">Gender</label>
+                    <select id="gender" name="gender" required>
+                        <option value="">Select Gender</option>
+                        <option value="Male">Male</option>
+                        <option value="Female">Female</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="disability">Disability</label>
+                    <select id="disability" name="disability" required>
+                        <option value="">Select Disability</option>
+                        <option value="Normal">Normal</option>
+                        <option value="Visually Impaired">Visually Impaired</option>
+                        <option value="Hearing/Speech Impaired">Hearing/Speech Impaired</option>
+                        <option value="Physically Impaired">Physically Impaired</option>
+                        <option value="Mentally Impaired">Mentally Impaired</option>
+                        <option value="Spastic/Palsy/Epilectic Condition">Spastic/Palsy/Epilectic Condition</option>
+                        <option value="Low Vision">Low Vision</option>
+                    </select>
+                </div>
             </div>
-            <div class="form-group unselectable">
-                <label for="dob">Date of Birth</label>
-                <input type="date" id="dob" name="dob" required>
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="state">State</label>
+                    <input type="text" id="state" name="state" required>
+                </div>
+                <div class="form-group">
+                    <label for="lga">LGA or City</label>
+                    <input type="text" id="lga" name="lga" required>
+                </div>
             </div>
-            <div class="form-group unselectable">
-                <label for="gender">Gender</label>
-                <select id="gender" name="gender" required>
-                    <option value="">Select Gender</option>
-                    <option value="Male">Male</option>
-                    <option value="Female">Female</option>
-                </select>
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="phone">Phone Number</label>
+                    <input type="tel" id="phone" name="phone" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email (Optional)</label>
+                    <input type="email" id="email" name="email">
+                </div>
             </div>
-            <div class="form-group unselectable">
-                <label for="disability">Disability</label>
-                <select id="disability" name="disability" required>
-                    <option value="">Select Disability</option>
-                    <option value="Normal">Normal</option>
-                    <option value="Visually Impaired">Visually Impaired</option>
-                    <option value="Hearing/Speech Impaired">Hearing/Speech Impaired</option>
-                    <option value="Physically Impaired">Physically Impaired</option>
-                    <option value="Mentally Impaired">Mentally Impaired</option>
-                    <option value="Spastic/Palsy/Epilectic Condition">Spastic/Palsy/Epilectic Condition</option>
-                    <option value="Low Vision">Low Vision</option>
-                </select>
-
-            </div>
-            <div class="form-group unselectable">
-                <label for="state">State</label>
-                <input type="text" id="state" name="state" required>
-            </div>
-            <div class="form-group unselectable">
-                <label for="lga">LGA or City</label>
-                <input type="text" id="lga" name="lga" required>
-            </div>
-            <div class="form-group unselectable">
+            <div class="form-group">
                 <label for="passport">Passport Photo (Max 15kb)</label>
                 <input type="file" id="passport" name="passport" accept="image/jpeg, image/jpg" required>
                 <img id="passportPreview" alt="Passport Preview"
                     style="display:none; width: 100px; height: 100px; margin-top: 10px;">
             </div>
-            <div class="form-actions unselectable">
+            <div class="form-actions">
                 <button type="submit" id="submit">Submit</button>
             </div>
         </form>
