--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -34,21 +34,23 @@
     <meta property="og:site_name" content="Catholic Education Board">
 
     <title>Catholic Education Board - ePortal</title>
-    <link rel="stylesheet" href="/CECePortal/assets/styles/home.css">
-    <link rel="stylesheet" href="/CECePortal/styles/media.css">
+    <link rel="stylesheet" href="/CECePortal/assets/styles/index.css">
+    <link rel="stylesheet" href="/CECePortal/assets/styles/media.css">
+    <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
+
 </head>
 
 <body>
     <header>
         <nav class="container unselectable">
             <div class="nav-wrapper unselectable">
-                <a href="/CECePortal/index.html" class="logo-link">
+                <a href="index.html" class="logo-link">
                     <img src="/CECePortal/assets/logo/logo2.png" alt="CEC ePortal Logo" class="logo-image unselectable">
                 </a>
                 <span class="logo unselectable">CEC ePortal</span>
                 <div class="hamburger unselectable" aria-label="Menu toggle"></div>
                 <ul>
-                    <li><a href="/CECePortal/index.html" class="text-sm unselectable">Home</a></li>
+                    <li><a href="index.html" class="text-sm unselectable">Home</a></li>
                     <li><a href="#examination" class="text-sm unselectable">Examination</a></li>
                     <li><a href="#contact" class="text-sm unselectable">Contact</a></li>
                 </ul>
@@ -121,14 +123,15 @@
         <div class="footer-content unselectable">
             <div class="footer-links unselectable">
                 <a href="/CECePortal/index.html">Home</a>
-                <a href="/CECePortal/registration.html">Registration</a>
+                <a href="/CECePortal/verify-centre.html">Registration</a>
                 <a href="/CECePortal/contact.html">Contact</a>
             </div>
             <div class="footer-info unselectable">
                 <p>&copy; 2024 Catholic Education Board. All rights reserved.</p>
-                <p>123 Education St, City, Country</p>
+                <p>Catholic Education Comission, Nigeria</p>
             </div>
         </div>
     </footer>
-    <script src="/CECePortal/assets/scripts/main.js" defer async></script>
+    <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
+    <script src="/CECePortal/assets/scripts/main.js"></script>
 </body>
