--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -1,85 +1,70 @@
-<<<<<<< Updated upstream <!DOCTYPE html>
-    <html lang="en">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login - Catholic Education Board</title>
+    <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
+    <link href="/CECePortal/assets/styles/login.css" rel="stylesheet">
+</head>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Login - CEC ePortal</title>
-        <link rel="stylesheet" href="/CECePortal/assets/styles/login.css">
-    </head>
-
-    <body>
-        <div class="login-container unselectable">
-            <a href="/CECePortal/index.html" class="logo-link unselectable">
-                <img src="/CECePortal/assets/logo/logo2.png" alt="CEC ePortal Logo" class="logo-image">
-            </a>
-            <form class="login-form unselectable" action="login-process.html" method="post">
-                <h2>Login</h2>
-                <p>Enter your credentials to access the portal.</p>
+<body>
+    <div class="login-container unselectable">
+        <!-- Left Panel -->
+        <div class="login-left unselectable">
+            <img src="/CECePortal/assets/logo/logo.png" alt="CEC ePortal Logo">
+            <p>Welcome back to the Catholic Education Board ePortal. Please enter your login details to continue.</p>
+            <div class="login-hints unselectable">
+                <p><strong>Hints:</strong></p>
+                <p>1. Use your Centre Number as the username.</p>
+                <p>2. Ensure your password is strong.</p>
+                <p>3. Contact support if you experience any issues.</p>
+            </div>
+        </div>
+        <!-- Right Panel -->
+        <div class="login-right unselectable">
+            <div class="header-icons unselectable">
+                <a href="index.html" class="house-icon unselectable">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                        class="bi bi-house" viewBox="0 0 16 16">
+                        <path
+                            d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z" />
+                    </svg>
+                </a>
+            </div>
+            <h2>Login</h2>
+            <form id="loginForm">
                 <div class="form-group unselectable">
-                    <label for="centre-number">Centre or School Number</label>
-                    <input type="text" id="centre-number" name="centre-number" required>
+                    <label for="centreNumber">Centre Number</label>
+                    <input type="number" class="form-control" id="centreNumber" name="centreNumber"
+                        placeholder="Enter Centre Number" required>
                 </div>
                 <div class="form-group unselectable">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
+                    <label for="emailAddress">Email Address</label>
+                    <input type="email" class="form-control" id="emailAddress" name="emailAddress"
+                        placeholder="Enter Email Address" required>
                 </div>
-                <div class="form-group unselectable">
+                <div class="form-group password-group unselectable">
                     <label for="password">Password</label>
-                    <input type="password" id="password" name="password" required>
+                    <input type="password" class="form-control" id="password" name="password"
+                        placeholder="Enter Password" required>
+                    <i class="bi bi-eye-slash show-password unselectable" id="togglePassword"></i>
                 </div>
                 <div class="form-actions unselectable">
-                    <button type="submit">Login</button>
-                    <a href="/CECePortal/registration.html">Don't have an account? Register</a>
+                    <button type="submit" class="btn">Login</button>
+                </div>
+                <div class="form-links unselectable">
+                    <a href="verify-centre.html">Register School</a>
+                    <span>|</span>
+                    <a href="reset-password.html">Reset Password</a>
                 </div>
             </form>
+             <!-- Notification element -->
+        <div id="notification" class="notification unselectable"></div>
         </div>
-    </body>
+    </div>
+    <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
+    <script src="/CECePortal/assets/scripts/login.js"></script>
+</body>
 
-    =======
-    <!DOCTYPE html>
-    <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Login - CEC ePortal</title>
-        <link rel="stylesheet" href="/CECePortal/assets/styles/login.css">
-    </head>
-    <!-- <header>
-    <nav class="container">
-        <a href="/CECePortal/index.html" span class="logo unselectable">CEC ePortal</a>
-    </nav>
-</header> -->
-
-    <body>
-        <div class="login-container unselectable">
-            <a href="/CECePortal/index.html" class="logo-link unselectable">
-                <img src="/CECePortal/assets/logo/logo2.png" alt="CEC ePortal Logo" class="logo-image">
-            </a>
-            <form class="login-form unselectable" action="login-process.html" method="post">
-                <h2>Login</h2>
-                <p>Enter your credentials to access the portal.</p>
-                <div class="form-group unselectable">
-                    <label for="centre-number">Centre or School Number</label>
-                    <input type="text" id="centre-number" name="centre-number" required>
-                </div>
-                <div class="form-group unselectable">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group unselectable">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" name="password" required>
-                </div>
-                <div class="form-actions unselectable">
-                    <button type="submit">Login</button>
-                    <a href="/CECePortal/registration.html">Don't have an account? Register</a>
-                </div>
-            </form>
-        </div>
-    </body>
-
-    >>>>>>> Stashed changes
-
-    </html>
