--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -7,6 +7,8 @@
     <title>Login - Catholic Education Board</title>
     <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
     <link href="/CECePortal/assets/styles/login.css" rel="stylesheet">
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';">
 </head>
 
 <body>
@@ -37,21 +39,21 @@
                 </a>
             </div>
             <h2>Login</h2>
-            <form id="loginForm">
+            <form id="loginForm" method="POST" action="/CECePortal/centre-enroll.html">
                 <div class="form-group unselectable">
                     <label for="centreNumber">Centre Number</label>
-                    <input type="text" class="form-control" id="centreNumber" name="centreNumber"
-                        placeholder="Enter Centre Number">
+                    <input type="number" class="form-control" id="centreNumber" name="centreNumber"
+                        placeholder="Enter Centre Number" required>
                 </div>
                 <div class="form-group unselectable">
                     <label for="emailAddress">Email Address</label>
                     <input type="email" class="form-control" id="emailAddress" name="emailAddress"
-                        placeholder="Enter Email Address">
+                        placeholder="Enter Email Address" required>
                 </div>
                 <div class="form-group password-group unselectable">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" id="passwd" name="password"
-                        placeholder="Enter Password">
+                    <input type="password" class="form-control" id="passwd" name="password" placeholder="Enter Password"
+                        required>
                     <i class="bi bi-eye-slash show-password unselectable" id="togglePassword"></i>
                 </div>
                 <div class="form-actions unselectable">
@@ -66,8 +68,8 @@
             <!-- Notification element -->
             <div id="notification" class="notification unselectable"></div>
         </div>
-
     </div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
     <script src="/CECePortal/assets/scripts/login.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 </body>
